--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
         Reach out to AMCARES for inquiries, partnerships, or support. Call our helpline or email us.
       </p>
       <div class="text-center">
-        <p><i class="fas fa-phone-alt mr-2 icon-primary"></i> Toll-Free: 1800-300-AMCARES</p>
-        <p><i class="fas fa-envelope mr-2 icon-primary"></i> info@amcares.org</p>
+        <p><i class="fas fa-phone-alt mr-2 icon-primary"></i> 9452683794-AMCARES</p>
+        <p><i class="fas fa-envelope mr-2 icon-primary"></i> amcareshealthorganization@gmail.com</p>
         <p><i class="fas fa-map-marker-alt mr-2 icon-primary"></i> Delhi, India</p>
       </div>
     </div>
@@ -217,6 +217,7 @@
   <footer class="bg-accent text-white p-4">
     <div class="container mx-auto px-4 text-center">
       <p>© 2025 AMCARES. All rights reserved.</p>
+      <p>Founder - Shreya Srivastava.</p>
       <div class="mt-4 space-x-4">
         <a href="#" class="hover:text-secondary"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="hover:text-secondary"><i class="fab fa-twitter"></i></a>
