--- a/index.html
+++ b/index.html
@@ -1303,7 +1303,7 @@
   <footer class="footer">
     <div class="container">
       <p>@ 2025 AMCARES HEALTH ORGANIZATION.</p>
-      <p>Founder - SHREYA SRIVASTAVA.</p>
+      <p>FOUNDER - SHREYA SRIVASTAVA.</p>
       <div>
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
