--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,7 @@
       <h2>About Us</h2>
       <div class="about-content">
         <div class="about-text">
-          <p>AMCARES Health Organization, founded in 2018 by Shreya Srivastava, is a pioneering non-profit dedicated to transforming lives through organ donation in India. Inspired by Shreya's personal journey of saving her father's life through a liver transplant, we aim to bridge the critical gap between the 500,000 organs needed annually and the mere 3,500 transplants performed, addressing the low donor rate of 0.65 per million population.</p>
+          <p>AMCARES Health Organization, founded in 2025 by Shreya Srivastava, is a pioneering non-profit dedicated to transforming lives through organ donation in India. We aim to bridge the critical gap between the 500,000 organs needed annually and the mere 3,500 transplants performed, addressing the low donor rate of 0.65 per million population.</p>
           <p><strong>Our Mission:</strong> To raise awareness, dispel myths, and facilitate organ donation while providing holistic support to patients and families.</p>
           <p><strong>Our Vision:</strong> A future where every Indian in need of an organ transplant has access to one, supported by a robust community of donors and advocates.</p>
           <p><strong>Our Team:</strong> Led by Dr. Anil Sharma, a renowned transplant surgeon, and supported by a team of doctors, counselors, and volunteers, we work tirelessly to educate communities, partner with hospitals like Medanta and Apollo, and advocate for policy changes with NOTTO.</p>
