--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AM Cares - HealthTech Solutions</title>
+  <title>AMCARES - HealthTech Solutions</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <style>
@@ -275,7 +275,7 @@
   <!-- Home Slide -->
   <section id="home" class="slide hero-bg text-white">
     <div class="container mx-auto text-center px-4 py-16 fade-in">
-      <h2 class="text-5xl font-bold font-montserrat mb-6">Welcome to AM Cares</h2>
+      <h2 class="text-5xl font-bold font-montserrat mb-6">Welcome to AMCARES Health ORGANIZATION</h2>
       <p class="text-xl mb-8 max-w-3xl mx-auto font-inter">Delivering innovative healthtech solutions and compassionate care to empower healthier communities.</p>
       <a href="#contact" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold font-inter hover:bg-blue-700 hover-scale text-base">Get Started</a>
     </div>
@@ -443,7 +443,8 @@
   <!-- Footer -->
   <footer class="bg-blue-900 text-white py-6">
     <div class="container mx-auto text-center font-inter">
-      <p>© 2025 AM Cares. All rights reserved.</p>
+      <p>© 2025 AMCARES HEALTH ORGANIZATION. </p>
+       <p>FOUNDER - SHREYA SRIVASTAVA.</p>
     </div>
   </footer>
 
@@ -482,8 +483,8 @@
       "when was am cares founded": "AM Cares was founded in 2025.",
       "who founded am cares": "AM Cares was founded by Shreya Srivastava.",
       "who is the founder": "The founder of AM Cares is Shreya Srivastava.",
-      "tell me about the founder": "Shreya Srivastava is the founder of AM Cares, a software developer and passionate technical enthusiast. Her personal journey, particularly her experience donating her liver to save her father from liver cancer in 2018, inspired her to establish AM Cares in 2025. The organization focuses on supporting families facing organ transplant challenges, driven by her commitment to resilience, compassion, and healthcare equity.",
-      "about shreya srivastava": "Shreya Srivastava, the founder of AM Cares, is a software developer with a deep passion for technology and healthcare. Motivated by her own experience as a liver donor for her father in 2018, she founded AM Cares in 2025 to provide support and resources for organ transplant patients and their families, aiming to make healthcare accessible and equitable.",
+      "tell me about the founder": "Shreya Srivastava is the founder of AMCARES, a software developer and passionate technical enthusiast. Her personal journey, particularly her experience donating her liver to save her father from liver cancer in 2018, inspired her to establish AM Cares in 2025. The organization focuses on supporting families facing organ transplant challenges, driven by her commitment to resilience, compassion, and healthcare equity.",
+      "about shreya srivastava": "Shreya Srivastava, the founder of AMCARES, is a software developer with a deep passion for technology and healthcare. Motivated by her own experience as a liver donor for her father in 2018, she founded AM Cares in 2025 to provide support and resources for organ transplant patients and their families, aiming to make healthcare accessible and equitable.",
       "what does am cares do": "AM Cares is a healthtech organization dedicated to transforming healthcare delivery through innovation and compassion. It provides primary care, community support programs, and specialized care, with a focus on supporting organ transplants (liver, kidney, and heart). AM Cares collaborates with top specialists, like those from Max Hospital, to facilitate transplant processes, donor registration, and comprehensive care, aiming to enhance community well-being.",
       "about liver transplant": "A liver transplant is a surgical procedure to replace a diseased liver with a healthy one from a living or deceased donor. AM Cares supports patients needing liver transplants by connecting them with top specialists, such as Dr. Subash Gupta from Max Hospital, and providing resources for pre- and post-transplant care, including immunosuppressive therapy and rehabilitation.",
       "about kidney transplant": "A kidney transplant involves replacing a failed kidney with a healthy one from a living or deceased donor. AM Cares facilitates kidney transplant support by partnering with experts like Dr. Puneet Arora from Max Hospital, offering guidance on donor matching, pre-transplant evaluations, and post-operative care to ensure successful outcomes.",
