--- a/index.html
+++ b/index.html
@@ -407,9 +407,9 @@
       </p>
       <div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-lg hover-scale">
         <div class="space-y-4 font-inter">
-          <p><strong>Email:</strong> <a href="mailto:info@amcares.org" class="text-blue-600 hover:underline">info@amcares.org</a></p>
-          <p><strong>Phone:</strong> (123) 456-7890</p>
-          <p><strong>Address:</strong> 123 Health St, Care City, USA</p>
+          <p><strong>Email:</strong> <a href="mailto:amcareshealthorganization@gmail.com" class="text-blue-600 hover:underline">info@amcares.org</a></p>
+          <p><strong>Phone:</strong> 9452683794</p>
+          <p><strong>Address:</strong> Delhi, India</p>
         </div>
         <div class="mt-6">
           <button onclick="alert('Thank you for your interest! Please email us at info@amcares.org.')" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold font-inter hover:bg-blue-700 hover-scale text-base">Send a Message</button>
