--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
       </p>
       <div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-lg hover-scale">
         <div class="space-y-4 font-inter">
-          <p><strong>Email:</strong> <a href="mailto:amcareshealthorganization@gmail.com" class="text-blue-600 hover:underline">info@amcares.org</a></p>
+          <p><strong>Email:</strong> <a href="mailto:amcareshealthorganization@gmail.com" class="text-blue-600 hover:underline">amcareshealthorganization@gmail.com</a></p>
           <p><strong>Phone:</strong> 9452683794</p>
           <p><strong>Address:</strong> Delhi, India</p>
         </div>
