--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
         Reach out to AMCARES for inquiries, partnerships, or support. Call our helpline or email us.
       </p>
       <div class="text-center">
-        <p><i class="fas fa-phone-alt mr-2 icon-primary"></i> Toll-Free: 1800-300-AMCARES</p>
-        <p><i class="fas fa-envelope mr-2 icon-primary"></i> info@amcares.org</p>
+        <p><i class="fas fa-phone-alt mr-2 icon-primary"></i> Toll-Free: 9452683794-AMCARES</p>
+        <p><i class="fas fa-envelope mr-2 icon-primary"></i> amcareshealthorganization@gmail.com</p>
         <p><i class="fas fa-map-marker-alt mr-2 icon-primary"></i> Delhi, India</p>
       </div>
     </div>
