--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
   <footer class="bg-accent text-white p-4">
     <div class="container mx-auto px-4 text-center">
       <p>© 2025 AMCARES. All rights reserved.</p>
+       <p>Founder - Shreya Srivastava.</p>
       <div class="mt-4 space-x-4">
         <a href="#" class="hover:text-secondary"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="hover:text-secondary"><i class="fab fa-twitter"></i></a>
