--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="AMCARES, Because we care, is a healthtech startup guiding patients through organ transplants and promoting organ donation awareness.">
+  <meta name="description" content="AMCARES, Because We Care, is a healthtech startup guiding patients through organ transplants and promoting organ donation awareness.">
   <meta name="keywords" content="AMCARES, organ transplant, organ donation, healthtech, Shreya Srivastava, healthcare navigation">
   <meta name="author" content="AMCARES">
   <title>AMCARES - Navigate Transplants with Ease</title>
@@ -88,7 +88,7 @@
       const slides = [
         {
           title: "Simplify Your Transplant Journey",
-          subtitle: "AMCARES, Because we care, offers tools to guide you through organ transplants.",
+          subtitle: "AMCARES, Because We Care, offers tools to guide you through organ transplants.",
           cta: "Explore Tools",
           href: "#tools",
           bgImage: "https://via.placeholder.com/1920x800?text=TransplantJourney"
