--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <section id="contact" className="py-20 bg-gray-50">
           <div className="container mx-auto px-4">
             <h2 className="text-3xl md:text-4xl font-bold text-center text-blue-600 mb-8 animate-fadeIn">Contact Us</h2>
-            <p className="text-lg text-gray-700 text-center mb-12 max-w-3xl mx-auto animate-fadeIn">Reach out to AMCAres for support or to join our mission.</p>
+            <p className="text-lg text-gray-700 text-center mb-12 max-w-3xl mx-auto animate-fadeIn">Reach out to AMCARES for support or to join our mission.</p>
             <p className="text-lg text-gray-700 text-center mb-12 max-w-3xl mx-auto animate-fadeIn">Email - amcareshealthorganization@gmail.com.</p>
 
             <div className="max-w-lg mx-auto">
@@ -436,7 +436,7 @@
       return (
         <footer className="bg-blue-600 text-white py-10">
           <div className="container mx-auto px-4 text-center">
-            <p className="mb-2">© 2025 AMCAres. All rights reserved.</p>
+            <p className="mb-2">© 2025 AMCARES. All rights reserved.</p>
             <p className="mb-4">Founded by Shreya Srivastava</p>
             <div className="flex justify-center gap-6">
               <a href="#privacy" className="text-white hover:underline">Privacy Policy</a>
