--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
 
     function Awareness() {
       const testimonials = [
-        { name: "Sarah M.", quote: "AMCARES made my transplant journey seamless and hopeful." },
-        { name: "Dr. Anil P.", quote: "Their awareness efforts are transformative for communities." },
-        { name: "James T.", quote: "I registered as a donor thanks to AMCARES education." }
+        { name: "Sarah M.", quote: "AMCARES made my transplant journey hopeful." },
+        { name: "Dr. Anil P.", quote: "Their awareness efforts are transformative." },
+        { name: "Ashish S.", quote: "I registered as a donor thanks to AMCARES." }
       ];
 
       return (
