--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         },
         {
           title: "Founded by Shreya Srivastava",
-          subtitle: "A healthtech vision launched in 2025.",
+          subtitle: "A healthtech vision launched in 2025",
           cta: "Our Mission",
           href: "#mission"
         }
