--- a/index.html
+++ b/index.html
@@ -280,15 +280,15 @@
       <h2 class="text-3xl font-bold text-center text-gray-800 mb-12 fade-in">Our Impact</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <div class="text-center fade-in">
-          <h3 class="text-4xl font-bold text-blue-600 mb-2">120,000</h3>
+          <h3 class="text-4xl font-bold text-blue-600 mb-2">10</h3>
           <p class="text-gray-600">Lives Saved</p>
         </div>
         <div class="text-center fade-in">
-          <h3 class="text-4xl font-bold text-blue-600 mb-2">20,000,000</h3>
+          <h3 class="text-4xl font-bold text-blue-600 mb-2">50</h3>
           <p class="text-gray-600">Donors Registered</p>
         </div>
         <div class="text-center fade-in">
-          <h3 class="text-4xl font-bold text-blue-600 mb-2">40,000</h3>
+          <h3 class="text-4xl font-bold text-blue-600 mb-2">10</h3>
           <p class="text-gray-600">Transplants Facilitated</p>
         </div>
       </div>
@@ -300,7 +300,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <h2 class="text-3xl font-bold text-center text-gray-800 mb-12 fade-in">About AMCARES</h2>
       <div class="fade-in text-center">
-        <p class="text-gray-600 mb-4 max-w-2xl mx-auto">AMCARES is a health-tech startup dedicated to raising awareness about organ donation. We educate communities, support donors and recipients, and collaborate with hospitals to facilitate life-saving transplants.</p>
+        <p class="text-gray-600 mb-4 max-w-2xl mx-auto">AMCARES is a transformative healthtech startup founded by Shreya Srivastava, a dedicated software developer and technical enthusiast whose personal journey as a liver donor inspired a mission to revolutionize healthcare. In 2018, Shreya donated 75% of her liver to save her father’s life, an experience that exposed her to the challenges of organ transplantation and the pervasive myths surrounding medical care. Driven by this, AMCARES was established to provide accurate, accessible medical guidance, debunk misconceptions, and support individuals navigating organ transplants. By leveraging cutting-edge technology and a compassionate approach, AMCARES empowers users with reliable information and resources, fostering a healthier, more informed world.</p>
         <p class="text-gray-600 max-w-2xl mx-auto">Our mission is to inspire hope and create a lasting impact through the power of organ donation.</p>
       </div>
     </div>
