--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <h2 class="text-3xl font-bold text-center text-gray-800 mb-12 fade-in">About AMCARES</h2>
       <div class="fade-in text-center">
         <p class="text-gray-600 mb-4 max-w-2xl mx-auto">AMCARES is a transformative healthtech startup founded by Shreya Srivastava, a dedicated software developer and technical enthusiast whose personal journey as a liver donor inspired a mission to revolutionize healthcare. In 2018, Shreya donated 75% of her liver to save her father’s life, an experience that exposed her to the challenges of organ transplantation and the pervasive myths surrounding medical care. Driven by this, AMCARES was established to provide accurate, accessible medical guidance, debunk misconceptions, and support individuals navigating organ transplants. By leveraging cutting-edge technology and a compassionate approach, AMCARES empowers users with reliable information and resources, fostering a healthier, more informed world.</p>
-        <p class="text-gray-600 max-w-2xl mx-auto">Our mission is to inspire hope and create a lasting impact through the power of organ donation.</p>
+        <p class="text-gray-600 max-w-2xl mx-auto">AMCARES is built on the mission to empower individuals with accurate, accessible, and compassionate healthcare guidance. The startup aims to break down barriers to medical information, dispel myths, and foster a supportive ecosystem for patients, families, and healthcare providers. Its vision is to create a world where no one is hindered by misinformation or lack of resources when making critical health decisions, particularly in the context of organ transplantation.</p>
       </div>
     </div>
   </section>
