--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
       <h2 class="text-3xl font-bold text-center text-gray-800 mb-8 fade-in">Organ Donation Laws</h2>
       <div class="fade-in max-w-3xl mx-auto text-center">
-        <p class="text-gray-600 bg-blue-50 p-6 sm:p-8 rounded-lg shadow-md scale-hover">Organ donation is regulated to ensure ethical practices. In the U.S., the Uniform Anatomical Gift Act governs donation, protecting your rights as a donor. Learn more through your state’s health department.</p>
+        <p class="text-gray-600 bg-blue-50 p-6 sm:p-8 rounded-lg shadow-md scale-hover">Organ donation in India is regulated by the Transplantation of Human Organs and Tissues Act, 1994. The law allows both deceased and living donors to donate their organs. It also identifies brain death as a form of death.[1] The National Organ and Tissue Transplant Organization (NOTTO) functions as the apex body for activities of relating to procurement, allotment and distribution of organs in the country.</p>
         <a href="https://www.organdonor.gov" target="_blank" class="mt-6 inline-block bg-blue-600 text-white px-6 py-3 rounded-md hover:bg-blue-700 transition scale-hover" aria-label="Learn More About Organ Donation Laws">Learn More</a>
       </div>
     </div>
