--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
   </button>
 
   <!-- Navbar -->
-  <nav class="bg-blue-600 text-white fixed w-full z-10 shadow-md" role="navigation">
+  <nav class="bg-blue-700 text-white fixed w-full z-10 shadow-md" role="navigation">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16">
-        <div class="flex items-center">
-          <h1 class="text-2xl font-bold">AMCARES</h1>
-        </div>
-        <div class="hidden md:flex items-center space-x-8">
-          <a href="#home" class="hover:text-blue-200" aria-label="Home">Home</a>
+        <!-- <div class="flex items-center"> -->
+          <!-- </div> -->
+          <div class="hidden md:flex items-center space-x-8">
+            <img src="./img/logoamcares.png" alt="Chatbot Avatar" class="w-[12rem] h-[12rem] rounded-full filter brightness-0 invert" />
+            <a href="#home" class="hover:text-blue-200" aria-label="Home">Home</a>
           <a href="#about" class="hover:text-blue-200" aria-label="About">About</a>
           <div class="relative dropdown">
             <a href="#organ-donation" class="hover:text-blue-200" aria-label="Organ Donation" role="button" aria-haspopup="true" aria-expanded="false">Organ Donation</a>
